trying to fix choppiness on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ b {
 	  content: "";
 	  width: 9px;
 	  height: 9px;
-	  background-color: #bdbdbd;
+	  background-color: #bdbdbd6e;
 	  border-radius: 9px;
 	  box-shadow: 0px 0px 2px 8px #f7f7f7;
 	}
@@ -197,11 +197,6 @@ b {
   /* Border Box */
   * {
 	box-sizing: border-box;
-  }
-  
-  /* Fonts */
-  body {
-	font-family: Roboto;
   }
   
   #timeline {
